--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,15 @@
 
 /* Your CSS Code here. */
+input{
+	padding:5px;
+	margin:4px;
+}
+#name{
+	margin-left:50px;
+}
+#email{
+	margin-left:50px;
+}
+#gender{
+	margin-left:50px;
+}
